--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>EU Capnaign</title>
     <link rel="stylesheet" href="assets/styles/one-page-css.css" />
     <link rel="stylesheet" href="assets/styles/one-page-responsive.css" />
+    <link rel="stylesheet" href="assets/styles/slick.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
@@ -741,11 +743,206 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="video-section">
+          <div class="handle-container-small">
+            <div class="video-container">
+              <div class="video-box">
+                <h1>Videos</h1>
+                <div class="text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do
+                </div>
+                <div class="iframe-video">
+                  <iframe
+                    id="youtube-video"
+                    src="https://www.youtube.com/embed/v1M4ydNlgP0"
+                    title="video"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                  ></iframe>
+                  <!-- <div class="play-button" id="play-button">
+                    <span>
+                      <svg
+                        width="68"
+                        height="68"
+                        viewBox="0 0 68 68"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M34.0003 67.3333C15.5903 67.3333 0.666992 52.41 0.666992 34C0.666992 15.59 15.5903 0.666656 34.0003 0.666656C52.4103 0.666656 67.3337 15.59 67.3337 34C67.3337 52.41 52.4103 67.3333 34.0003 67.3333ZM29.407 22.05C29.2064 21.9161 28.9732 21.8392 28.7323 21.8274C28.4915 21.8156 28.2519 21.8693 28.0391 21.9829C27.8264 22.0964 27.6484 22.2656 27.5242 22.4723C27.4 22.679 27.3341 22.9155 27.3337 23.1567V44.8433C27.3341 45.0845 27.4 45.321 27.5242 45.5277C27.6484 45.7344 27.8264 45.9036 28.0391 46.0171C28.2519 46.1307 28.4915 46.1844 28.7323 46.1726C28.9732 46.1608 29.2064 46.0838 29.407 45.95L45.6703 35.11C45.8532 34.9883 46.0032 34.8233 46.1069 34.6296C46.2107 34.436 46.265 34.2197 46.265 34C46.265 33.7803 46.2107 33.564 46.1069 33.3704C46.0032 33.1767 45.8532 33.0117 45.6703 32.89L29.4037 22.05H29.407Z"
+                          fill="white"
+                        />
+                      </svg>
+                    </span>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="quotes-section">
+          <div class="handle-container-small"> 
+              <div class="quotes-text">
+                <h1>Quotes</h1>
+                <div class="text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                  ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis
+                </div>
+              </div>
+              <div class="quotes-slider">
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+                <a href="#" class="quotes-item">
+                  <div class="quote-svg">
+                    <span>
+                      <svg
+                        width="67"
+                        height="89"
+                        viewBox="0 0 67 89"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0.0322136 0.0831927C1.7859 0.0831927 3.04497 0.0831927 4.30403 0.0831927C23.9865 0.0767935 43.6689 0.115189 63.3578 3.19316e-06C66.1329 -0.0191944 67.0258 0.703915 67.0001 3.56435C66.8523 18.8008 66.923 34.0437 66.9037 49.2866C66.9037 50.0097 66.7817 50.7328 66.6853 51.8399H37.6177C38.0353 59.2693 41.8125 63.8704 47.8829 66.8716C53.7093 69.7512 59.9661 70.18 66.6404 69.6424V87.4514C52.2382 89.5311 38.016 90.299 24.2563 84.6614C9.68715 78.6909 2.25484 67.2875 1.18849 52.0575C0.257046 38.6831 0.353402 25.2384 0.0450611 11.8257C-0.0448718 8.01819 0.0322136 4.21707 0.0322136 0.0831927Z"
+                          fill="#FFCC02"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscingLorem
+                    Lorem ipsum dolor sit amet,
+                  </div>
+                </a>
+              </div>
+            </div> 
+        </div>
+      </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <!-- <script src="assets/js/slick.js"></script> -->
+
     <script src="assets/js/one-page-js.js"></script>
+
   </body>
 </html>
