--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>EU Capnaign</title>
     <link rel="stylesheet" href="assets/styles/one-page-css.css" />
     <link rel="stylesheet" href="assets/styles/one-page-responsive.css" />
-    <link rel="stylesheet" href="assets/styles/slick.css" />
 
     <link
       rel="stylesheet"
@@ -142,7 +141,7 @@
         </div>
       </div>
       <div class="bottom-header">
-        <div class="handle-container-big">
+        <div class="handle-container-big handle-relative-for-burger">
           <div class="b-header flex-center-0">
             <div href="#" class="logo">
               <a href="#">
@@ -235,12 +234,12 @@
                 <div class="burger-list"></div>
               </div>
               <div class="burger-lang">
-                <a href="#">ENG</a>
+                <a href="#" class="active">ENG</a>
+                <span>/</span>
                 <a href="#">GEO</a>
               </div>
             </div>
           </div>
-          
         </div>
       </div>
     </header>
@@ -1005,96 +1004,96 @@
             src="assets/img/yellowborder.png"
             alt="backgorund"
           />
-           <div class="overflow-gallery">
+          <div class="overflow-gallery">
             <div class="handle-container-small">
-            <div class="gallery-box">
-              <div class="gallery-text-side">
-                <h1>image Gallery</h1>
-                <div class="text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit, sed do eiusmod tempor
-                </div>
-              </div>
-              <div class="gallery-box-image">
-                <div class="col-big-01">
-                  <div class="col-small-01">
-                    <div class="col-row-01 col-row-02">
-                      <a
-                        href="assets/img/gallery1.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery1.png" alt="img" />
-                      </a>
-                    </div>
-                    <div class="col-row-01 col-row-hide">
-                      <img src="assets/img/now.png" alt="now" />
-                    </div>
-                  </div>
-                  <div class="col-small-01">
-                    <div class="col-row-01">
-                      <a
-                        href="assets/img/gallery2.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery2.png" alt="img" />
-                      </a>
-                    </div>
-                    <div class="col-row-01 col-row-02">
-                      <a
-                        href="assets/img/gallery3.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery3.png" alt="img" />
-                      </a>
-                    </div>
+              <div class="gallery-box">
+                <div class="gallery-text-side">
+                  <h1>image Gallery</h1>
+                  <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod tempor
                   </div>
                 </div>
-                <div class="col-big-01">
-                  <div class="col-small-01">
-                    <div class="col-row-01">
-                      <a
-                        href="assets/img/gallery4.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery4.png" alt="img" />
-                      </a>
+                <div class="gallery-box-image">
+                  <div class="col-big-01">
+                    <div class="col-small-01">
+                      <div class="col-row-01 col-row-02">
+                        <a
+                          href="assets/img/gallery1.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery1.png" alt="img" />
+                        </a>
+                      </div>
+                      <div class="col-row-01 col-row-hide">
+                        <img src="assets/img/now.png" alt="now" />
+                      </div>
                     </div>
-                    <div class="col-row-01 col-row-03">
-                      <a
-                        href="assets/img/gallery5.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery5.png" alt="img" />
-                      </a>
+                    <div class="col-small-01">
+                      <div class="col-row-01">
+                        <a
+                          href="assets/img/gallery2.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery2.png" alt="img" />
+                        </a>
+                      </div>
+                      <div class="col-row-01 col-row-02">
+                        <a
+                          href="assets/img/gallery3.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery3.png" alt="img" />
+                        </a>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-small-01">
-                    <div class="col-row-01">
-                      <a
-                        href="assets/img/gallery6.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery6.png" alt="img" />
-                      </a>
+                  <div class="col-big-01">
+                    <div class="col-small-01">
+                      <div class="col-row-01">
+                        <a
+                          href="assets/img/gallery4.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery4.png" alt="img" />
+                        </a>
+                      </div>
+                      <div class="col-row-01 col-row-03">
+                        <a
+                          href="assets/img/gallery5.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery5.png" alt="img" />
+                        </a>
+                      </div>
                     </div>
-                    <div class="col-row-01 col-row-hide">
-                      <img src="assets/img/now.png" alt="now" />
-                    </div>
-                    <div class="col-row-01 col-row-02">
-                      <a
-                        href="assets/img/gallery7.png"
-                        data-fancybox="gallery-row"
-                      >
-                        <img src="assets/img/gallery7.png" alt="img" />
-                      </a>
+                    <div class="col-small-01">
+                      <div class="col-row-01">
+                        <a
+                          href="assets/img/gallery6.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery6.png" alt="img" />
+                        </a>
+                      </div>
+                      <div class="col-row-01 col-row-hide">
+                        <img src="assets/img/now.png" alt="now" />
+                      </div>
+                      <div class="col-row-01 col-row-02">
+                        <a
+                          href="assets/img/gallery7.png"
+                          data-fancybox="gallery-row"
+                        >
+                          <img src="assets/img/gallery7.png" alt="img" />
+                        </a>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-           </div>
         </div>
       </section>
       <section>
@@ -1215,18 +1214,24 @@
               </div>
               <div class="footer-links-info">
                 <h1>Contact</h1>
-                <ul><li><a href="#">D.Agmashenebeli ave. 35</a></li>
-                  <li><a href="mailto:someone@example.com">Example@example.ge</a></li>
-                  <li><a href="tel:+995 945 876 524"  >+995 945 876 524</a></li></ul>
+                <ul>
+                  <li><a href="#">D.Agmashenebeli ave. 35</a></li>
+                  <li>
+                    <a href="mailto:someone@example.com">Example@example.ge</a>
+                  </li>
+                  <li><a href="tel:+995 945 876 524">+995 945 876 524</a></li>
+                </ul>
               </div>
               <div class="footer-links-info">
                 <h1>other</h1>
-                <ul><li><a href="#">item 1</a></li>
+                <ul>
+                  <li><a href="#">item 1</a></li>
                   <li><a href="#">item 2</a></li>
-                  <li><a href="#"  >item 3</a></li></ul>
+                  <li><a href="#">item 3</a></li>
+                </ul>
               </div>
               <div class="footer-logo">
-                <img src="assets/img/footer-logo.png" alt="footer-logo">
+                <img src="assets/img/footer-logo.png" alt="footer-logo" />
               </div>
             </div>
             <div class="bottom-footer">
@@ -1243,7 +1248,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-    <!-- <script src="assets/js/slick.js"></script> -->
 
     <script src="assets/js/one-page-js.js"></script>
   </body>
