--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="handle-relative-for-burger">
       <div class="top-header">
         <div class="handle-container-big">
           <div class="t-header">
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="bottom-header">
-        <div class="handle-container-big handle-relative-for-burger">
+        <div class="handle-container-big">
           <div class="b-header flex-center-0">
             <div href="#" class="logo">
               <a href="#">
